## zpmC uses a new recurrence relation

## 20200719
##
## Low level phase unwrapping code is now
## written in C++
##
## more file splits to better group routines

## 20200914
##
## added argument refinecp to psfit_options()
## to control refinement step in circle.pars
##
## cleaned up fftfit source
##
## earlier this summer: added circle.hough

## 20200929
##
## added vortexfit
## removed refinecp and implementing code in circle.pars
## default fitting routine in circle.pars is nlsrob from package robustbase

## 20210612
##
## removed R code for gradient and derivatives of Zernikes except function rzernike.
## add c++ code for zernikes and gradients in cartesian coordinates
## add makezlist.iso
## fix makezlist to give correct result when minorder=0
## returns from psifit, fftfit, vortexfit are assigned S3 class "wf_fitted"

## 20210613
##
## added function PVr
## split out wf_net() into its own file

## 20210613
##
## Changes to pupil(), startest(), synth.interferogram()
## cleaned up documentation

## 20210709
##
## adding annular zernikes and modifying code to work
## with annular apertures
## modified functions: pupil, fitzernikes, wf_net
## added functions (in C++): zapmC, zapm_cart

## 20220410
##
## improve (I hope) crop function
## phase unwrapping options are consistent among analysis functions

## 20220918
##
## removed zapmC, zapm_cart
## added an option to psfit_options()
## changed pupil() and fitzernikes() for better user control of Zernike use

## 20220919
##
## added new zapm, zapm_iso, zapm_128, zapm_iso_128
## nontrivial examples for all 4

## 20221205
##
## added functions rzernike_ann_direct, zapm_direct, zapm_iso_direct
## These use formulas published in Mahajan (1994)
##
## added `annzern.pdf` to docs

## 20230602
##
## modified wf3d.pupil for compatibility with recent versions of rgl
##

## 20240317-19
##
## added a pc based psi option
## added some extra psi analysis options in psifit()
## added class "wf_zfit" and wrote a report method
##